--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ Jinja2==3.1.4
 joblib==1.4.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
-matplotlib==3.9.0
+matplotlib
 numpy==1.26.4
 openpyxl==3.1.4
 packaging==24.0
