--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ joblib==1.4.2
 kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib
-numpy==1.26.4
+numpy
 openpyxl==3.1.4
 packaging==24.0
 panda==0.3.1
