--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ pytz==2024.1
 pywin32-ctypes==0.2.2
 reportlab==4.2.2
 requests==2.32.3
-scikit-learn==1.5.0
+scikit-learn
 scipy==1.13.1
 setuptools==70.0.0
 six==1.16.0
