--- a/requirements.txt
+++ b/requirements.txt
@@ -47,7 +47,7 @@ pywin32-ctypes==0.2.2
 reportlab==4.2.2
 requests==2.32.3
 scikit-learn
-scipy==1.13.1
+scipy
 setuptools==70.0.0
 six==1.16.0
 SQLAlchemy==2.0.31
