--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ tinycss2==1.3.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.1
-weasyprint==62.3
+weasyprint
 webencodings==0.5.1
 Werkzeug==3.0.3
 wkhtmltopdf==0.2
