--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pip install -r requirements.txt && ./start.sh"
+  command = "pip install -r requirements.txt && flask run"
   publish = "public"
 
 [context.production.environment]
