--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "gunicorn -b 0.0.0.0:$PORT server:application"
-  publish = "/path/to/your/static/files"
+  publish = "C:\users\Fabian.Seleme\OneDrive - Toyota Argentina S.A\Escritorio\Punto de venta serivicio tecnico(HOYHOY)"
 
 [context.production.environment]
   PYTHON_VERSION = "3.8"
