--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "gunicorn -b 0.0.0.0:$PORT app:app"
+  command = "gunicorn -b :5000 app:app"
   publish = "your_flask_app"
 
 [context.production.environment]
