--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 [build]
-  command = "python3.8 app.py"  # Comando para iniciar tu aplicación Flask
-  functions = "netlify/functions"  # Si tienes funciones serverless
-  publish = "templates"  # Directorio de archivos HTML estáticos a desplegar
+  command = "gunicorn -b :$PORT app:app"
+  publish = "templates"
 
 [dev]
   command = "python3.8 app.py"  # Comando para desarrollo local, si lo usas
